fix: adjust card styles for accessibility and remove overflow

--- a/apps/nuxt/src/assets/scss/card.scss
+++ b/apps/nuxt/src/assets/scss/card.scss
@@ -4,7 +4,10 @@
 @use 'setting';
 
 .fr-card {
-  overflow: hidden;
+  //overflow: hidden; // For focus on card with accessibility // remove overflow and add border-radius
+  //.fr-enlarge-link a:before {
+  // border-radius: 22px;
+  //}
 
   :hover {
     cursor: pointer;
@@ -106,7 +109,7 @@
   }
 
   &__title a::after {
-    display: none !important;
+     display: none !important;
   }
 
   &__header--priority {
